<resources>
    <string name="app_name">Cpoapp</string>
    <string name="login_page_view_username">Username</string>
    <string name="login_page_view_password">Password</string>
    <string name="login_page_view_login">Login</string>
    <string name="login_page_view_don_t_have_an_account_sign_up_here">Don\'t have an account?  <u>Sign up here.</u></string>
    <string name="login_page_logo_content_description">logo of cpoapp</string>
    <string name="back4app_server_url">https://parseapi.back4app.com</string>
    <string name="back4app_app_id">ExU4WefkbLX1yLrYdPYYxHgvyu9HNfDKTTtl02h4</string>
    <string name="back4app_client_key">gPgt93UTbbRBdy3hLG6d7C7NrW5UjCXRDoSrSJDr</string>

    <string name="signup_page_already_have_an_account">You already have an account ? <u>Click here.</u></string>
    <string name="signup_page_sign_up_button">Signup</string>
    <string name="signup_page_confirm_password_hint">Confirm password</string>
    <string name="signup_page_password_hint">Password</string>
    <string name="signup_page_email_hint">Email</string>
    <string name="signup_page_name_hint">Name</string>
    <string name="signup_terms_and_conditions_text">terms and conditions</string>
    <string name="signup_page_first_name">First Name</string>
    <string name="signup_page_last_name">Last Name</string>
    <string name="signup_page_date_of_birth">Date of Birth</string>
    <string name="signup_page_gender">Gender</string>
    <string name="signup_page_phone_number">Phone Number</string>
    <string name="signup_page_address_hint">Address</string>
    <string name="signup_page_street_hint">Street</string>
    <string name="signup_page_city_hint">City</string>
    <string name="signup_page_state_hint">State</string>
    <string name="signup_page_country_hint">Country</string>
    <string name="signup_page_zip_hint">Zip</string>
    <string name="signup_page_male">Mâle</string>
    <string name="signup_page_female">Female</string>
    <string name="signup_page_not_indicated">Not indicated</string>
    <string name="signup_page_phone_number_hint">0022670123456</string>

</resources>