<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/signup_page_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Sign up form -->
        <ScrollView
            android:id="@+id/signup_page_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_page_logo"
                    android:layout_width="386dp"
                    android:layout_height="139dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/login_page_logo_content_description"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo512" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_page_logo">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_logpage_username_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:layout_constraintWidth_max="@dimen/widest_size_edittext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_logpage_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_page_view_username"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            android:textColor="@android:color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recommended_size_between_views" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_logpage_password_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:layout_constraintWidth_max="@dimen/widest_size_edittext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_logpage_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_page_view_password"
                            android:inputType="textPassword"
                            android:minHeight="48dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edt_logpage_login_button"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:onClick="homepage_login"
                        android:text="@string/login_page_view_login"
                        app:layout_constraintWidth_max="320dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/edt_logpage_signup_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:minHeight="48dp"
                        android:onClick="homepage_signup"
                        android:text="@string/login_page_view_don_t_have_an_account_sign_up_here"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>